namespaces/live.cloud-platform.service.justice.gov.uk/laa-cla-operator-app-staging/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-cla-operator-app-staging"
  labels:
    cloud-platform.justice.gov.uk/namespace: "laa-cla-operator-app-staging"
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-cala-work"
    cloud-platform.justice.gov.uk/application: "Civil Legal Advice Helpline"
    cloud-platform.justice.gov.uk/owner: "Client Access to Legal Aid (CALA): cla@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-cla-operator-app"
    cloud-platform.justice.gov.uk/team-name: "laa-get-access"
    cloud-platform.justice.gov.uk/review-after: ""
